--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+   <androidx.media3.ui.PlayerView
+       android:id="@+id/player_view"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
